5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1596_1017.log
== TEST (2019-04-02 15:56:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
R = 6371,1
d = R . arccos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 − g 2 ) ) 

-- ERROR:
File "XXXX", line 10
    d = R . arccos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 − g 2 ) ) 
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:56:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
R = 6371,1
d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 − g 2 ) ) 

-- EXECUTION TIME:
0.217608
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 10
    d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 \u2212 g 2 ) ) 
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:56:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
R = 6371,1
d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 − g 2 ) ) 

-- EXECUTION TIME:
0.174181
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 10
    d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 \u2212 g 2 ) ) 
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:56:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
R = 6371,1
d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 − g 2 ) ) 

-- EXECUTION TIME:
0.113214
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1596/1017/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:56:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
R = 6371,1
d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 − g 2 ) ) 

-- EXECUTION TIME:
0.136988
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 10
    d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 \u2212 g 2 ) ) 
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:56:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
R = 6371,1
d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 − g 2 ) ) 

-- EXECUTION TIME:
0.094497
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1596/1017/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:56:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
R = 6371,1
d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 − g 2 ) ) 

-- EXECUTION TIME:
0.104158
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 10
    d = R . acos ( s e n ( t 1 ) . s e n ( t 2 ) + cos ( t 1 ) . cos ( t 2 ) . cos ( g 1 \u2212 g 2 ) ) 
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:57:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
R = 6371,1
d = R*acos*(sen(t1)*sen(t2) + cos (t1)*cos(t2)*cos(g1−g2)) 

-- ERROR:
File "XXXX", line 10
    d = R*acos*(sen(t1)*sen(t2) + cos (t1)*cos(t2)*cos(g1−g2)) 
                                                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:58:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
r = 6371,1
d = r*acos*(sen(t1)*sen(t2) + cos (t1)*cos(t2)*cos(g1−g2)) 

-- ERROR:
File "XXXX", line 10
    d = r*acos*(sen(t1)*sen(t2) + cos (t1)*cos(t2)*cos(g1−g2)) 
                                                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:58:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(imput("latitude de p1")))
g1 = radians(float(imput("latitude de p1")))
t2 = radians(float(imput("latitude de p2")))
g2 = radians(float(imput("latitude de p2")))
r = 6371,1
d = r*acos*(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1−g2)) 

-- ERROR:
File "XXXX", line 10
    d = r*acos*(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1−g2)) 
                                                        ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:37:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))

#Raio de Terra
r = 6371.01

#formula da distancia

d = r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d, 2))

-- EXECUTION TIME:
0.290331
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
